examples/errors/NonExhaustiveCaseMatch.con
var = 5 .

caseStmt x = case x of
  ; 3 -> True
  ; 4 -> False .

noMatch = caseStmt 5 .
